make asm access work with both Java 11 and Java 16